@@ -13,6 +13,9 @@ Trunk (unreleased changes)
     HADOOP-2192. Error messages from "dfs mv" command improved.
     (Mahadev Konar via dhruba)
 
+    HADOOP-1902. "dfs du" command without any arguments operates on the
+    current working directory.  (Mahadev Konar via dhruba)
+
   NEW FEATURES
 
     HADOOP-1398.  Add HBase in-memory block cache.  (tomwhite)
